# dichonoia

./: .codespellrc  .gitignore  Cargo.toml  README.md  devenv.nix
assets/: rustdoc.css
dichonoia/: Cargo.toml
dichonoia-example/: Cargo.toml
dichonoia-example/src/: main.rs
dichonoia-models/: Cargo.toml
dichonoia-models/src/: application.rs  gateway.rs  guild.rs  lib.rs  user.rs
dichonoia-models/src/gateway/: events.rs  mod.rs
dichonoia-models/src/gateway/events/: guild_delete.rs  mod.rs  ready.rs
dichonoia-models/src/gateway/events/guild_create/: mod.rs  parse.rs  raw.rs
dichonoia-models/src/gateway/events/ready/: mod.rs  partial_application.rs  shard_info.rs
dichonoia-models/src/guild/: mod.rs  unavailable.rs
dichonoia-models/src/id/: marker.rs  mod.rs
dichonoia-models/src/user/: discriminator.rs  mod.rs
dichonoia/src/: gateway.rs  http.rs  lib.rs  ratelimit.rs
