[workspace]
resolver = "3"
members = ["dichonoia", "dichonoia-example","dichonoia-models"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["net"] }

dichonoia-models.path = "dichonoia-models"

serde_json = "1.0.145"
thiserror = "2.0.17"
