[package]
name = "dichonoia"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

governor = "0.10.2"
futures-util = "0.3.31"

tokio.workspace = true
thiserror.workspace = true
dichonoia-models.workspace = true
serde.workspace = true
serde_json.workspace = true
moka.workspace = true
chrono.workspace = true
reqwest.workspace = true
